--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -1,4 +1,4 @@
-<div class="detail-card">
+<div class="detail-card  {{ type }}">
     <h2 mat-dialog-title>{{ details.name }}</h2>
     <button mat-icon-button><mat-icon>favorite</mat-icon></button>
     <mat-dialog-content class="mat-typography">
