--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -1,6 +1,5 @@
 .pokemon-list-bg {
     width: 100%;
-    min-height: 100vh;
     margin-top: 30px;
     display: flex;
     justify-content: center;
@@ -12,6 +11,7 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 30px;
+        padding: 0 32px;
     }
 }
 
