working on favorite button bugs still present

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
             </mat-menu>
             <span>Pokédex</span>
             <span class="example-spacer"></span>
-            <button mat-icon-button>
-                <mat-icon>favorite</mat-icon>
+            <button mat-icon-button [routerLink]="['/favorites']">
+                <mat-icon>favorite_border</mat-icon>
             </button>
         </div>
         <div>
