--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -1,6 +1,6 @@
 <div class="detail-card  {{ type }}">
     <h2 mat-dialog-title>{{ details.name }}</h2>
-    <button mat-icon-button><mat-icon>favorite</mat-icon></button>
+    <button *ngIf="notFavorite" mat-icon-button (click)="addToFavorites()"><mat-icon>favorite_border</mat-icon></button>
     <mat-dialog-content class="mat-typography">
 
     </mat-dialog-content>
