--- a/src/app/pokemon-favorites/pokemon-favorites.component.scss
+++ b/src/app/pokemon-favorites/pokemon-favorites.component.scss
@@ -1,10 +1,8 @@
 .pokemon-favorites-bg {
     width: 100%;
     margin-top: 30px;
-    padding: 0 16px;
     display: flex;
     justify-content: center;
-    box-sizing: border-box;
 
     section {
         width: 100%;
@@ -13,16 +11,29 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 30px;
+        padding: 0 32px;
     }
 }
 
+
 mat-card {
-    width: 280px;
-    height: 180px;
+    width: 220px;
+    height: 160px;
+    border-radius: 20px;
+    box-shadow: -4px 4px 10px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -4px 4px 10px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -4px 4px 10px 0px rgba(0, 0, 0, 0.75);
 
     &:hover {
         cursor: pointer;
         transform: scale(1.05);
         transition: all 225ms ease-in-out;
     }
+}
+
+mat-card-content {
+    width: 100%;
+    height: 100%;
+    padding: 0 !important;
+    border-radius: 20px;
 }
