--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,3 +28,41 @@ nav {
 .margin-bottom-27px {
     margin-bottom: -26px;
 }
+
+.loader-container {
+    z-index: 99;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.loader img {
+    width: 100px;
+    animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.bg {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-image: url('../assets/img/pokeball.jpg');
+    background-position: center;
+    top: 0;
+    background-size: 650px;
+    filter: invert(0.8);
+    background-repeat: no-repeat;
+}
