--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -1,11 +1,16 @@
 <div class="detail-card  {{ type }}">
-    <h2 mat-dialog-title>{{ details.name }}</h2>
-    <button *ngIf="!alreadyFavorite" mat-icon-button (click)="addToFavorites()"><mat-icon>favorite_border</mat-icon></button>
-    <button *ngIf="alreadyFavorite" mat-icon-button (click)="removeFromFavorites()"><mat-icon>favorite</mat-icon></button>
+    <button class="favorite-icon" *ngIf="!alreadyFavorite" mat-icon-button (click)="addToFavorites()">
+        <mat-icon>favorite_border</mat-icon>
+    </button>
+    <button class="favorite-icon red-button" *ngIf="alreadyFavorite" mat-icon-button (click)="removeFromFavorites()">
+        <mat-icon>favorite</mat-icon>
+    </button>
+    <span class="name" mat-dialog-title>{{ name }}</span>
+
     <mat-dialog-content class="mat-typography">
 
     </mat-dialog-content>
-    <button mat-icon-button [mat-dialog-close]="true"><mat-icon>close</mat-icon></button>
-    <button *ngIf="id !== 1" mat-icon-button (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon></button>
-    <button mat-icon-button (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon></button>
+    <button class="close-icon" mat-icon-button [mat-dialog-close]="true"><mat-icon>close</mat-icon></button>
+    <button class="slide-left-icon" *ngIf="id !== 1" mat-icon-button (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon></button>
+    <button class="slide-right-icon" mat-icon-button (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon></button>
 </div>
