--- a/src/app/detail-view/detail-view.component.scss
+++ b/src/app/detail-view/detail-view.component.scss
@@ -1,5 +1,43 @@
 .detail-card {
+    color: white;
+    position: relative;
     width: 300px;
     height: 500px;
     transition: background-color 225ms linear;
+}
+
+.favorite-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.close-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.name {
+    color: white;
+    font-size: 36px;
+    position: absolute;
+    top: 70px;
+    left: 0px;
+}
+
+.slide-left-icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    left: 10px;
+}
+
+.slide-right-icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    right: 10px;
 }
