--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -1,8 +1,40 @@
 .card-content {
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 20px;
     color: white;
-    padding: 10px 15px;
+    padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
+}
+
+.types-container {
+    margin-top: 10px;
+}
+
+.pokemon-img {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 140px;
+    object-fit: cover;
+}
+
+.pokeball-img {
+    position: absolute;
+    bottom: -10px;
+    right: -10px;
+    width: 160px;
+    opacity: 0.4;
+    filter: invert(1);
+}
+
+.type-container {
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: 5px 20px;
+    margin-top: 5px;
+    display: inline-block;
+    border-radius: 25px;
+    font-size: 16px;
 }
