--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,16 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     box-sizing: border-box !important;
+    font-size: 20px !important;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
+.red-button {
+    color: rgb(221, 23, 1) !important;
 }
 
 .grass {
