--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,10 @@ nav {
     }
 }
 
+.pokedex {
+    font-size: 24px;
+}
+
 .margin-bottom-27px {
     margin-bottom: -26px;
 }
@@ -38,6 +42,10 @@ nav {
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.current-route {
+    margin-left: 120px;
 }
 
 .loader img {
