--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -5,12 +5,18 @@
     <button class="favorite-icon red-button" *ngIf="alreadyFavorite" mat-icon-button (click)="removeFromFavorites()">
         <mat-icon>favorite</mat-icon>
     </button>
-    <span class="name" mat-dialog-title>{{ name }}</span>
-
-    <mat-dialog-content class="mat-typography">
-
-    </mat-dialog-content>
     <button class="close-icon" mat-icon-button [mat-dialog-close]="true"><mat-icon>close</mat-icon></button>
-    <button class="slide-left-icon" *ngIf="id !== 1" mat-icon-button (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon></button>
-    <button class="slide-right-icon" mat-icon-button (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon></button>
+    <button class="slide-left-icon" *ngIf="id !== 1" mat-icon-button
+        (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon></button>
+    <button class="slide-right-icon" mat-icon-button
+        (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon></button>
+    <mat-dialog-content class="mat-typography">
+        <span class="name" mat-dialog-title>{{ name }}</span>
+        <span class="id" mat-dialog-title>#{{ details.id }}</span>
+        <img *ngIf="imgUrl" class="pokemon-img" [src]="sanitizeImageUrl(imgUrl)">
+        <img class="pokeball-img" src="../../assets/img/pokeball.jpg">
+        <div class="stats-container">
+            <app-stats-tabs [details]="details"></app-stats-tabs>
+        </div>
+    </mat-dialog-content>
 </div>
