--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,3 +77,17 @@ nav {
     filter: invert(0.8);
     background-repeat: no-repeat;
 }
+
+.go-up-icon {
+    position: absolute;
+    font-size: 50px;
+    bottom: 12px;
+    right: 12px;
+    filter: opacity(0.3);
+    transition: all 125ms ease-in-out;
+
+    &:hover {
+        cursor: pointer;
+        filter: opacity(0.8);
+    }
+}
