--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -17,7 +17,7 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-    width: 140px;
+    width: 120px;
     object-fit: cover;
 }
 
@@ -25,7 +25,7 @@
     position: absolute;
     bottom: -10px;
     right: -10px;
-    width: 160px;
+    width: 140px;
     opacity: 0.4;
     filter: invert(1);
 }
@@ -37,4 +37,10 @@
     display: inline-block;
     border-radius: 25px;
     font-size: 16px;
+}
+
+.id {
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
