--- a/src/app/stat/stat.component.scss
+++ b/src/app/stat/stat.component.scss
@@ -1,5 +1,5 @@
 .stat-row {
-    height: 30px;
+    height: 32px;
     display: flex;
     align-items: center;
 }
@@ -9,19 +9,28 @@
 }
 
 .progress-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.progress-bar {
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .base-progress {
     position: absolute;
     left: 0;
     background-color: #ededed;
-    width: 140px;
+    width: 170px;
     height: 4px;
 }
 
 app-stat-progress {
     position: absolute;
+    z-index: 1;
     left: 0;
     height: 4px;
+    background-color: rgb(0, 200, 255);
 }
