--- a/src/app/stats-tabs/stats-tabs.component.scss
+++ b/src/app/stats-tabs/stats-tabs.component.scss
@@ -13,3 +13,18 @@ tr {
 .stat-container {
     margin: 25px;
 }
+
+.moves-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 25px;
+
+    div {
+        display: inline-block;
+        font-weight: bold;
+        margin: 4px 4px 4px 0;
+        padding: 0 2px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+}
