bug fixes on next and previous pokemon buttons

--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -1,15 +1,22 @@
 <div class="detail-card  {{ type }}">
+
     <button class="favorite-icon" *ngIf="!alreadyFavorite" mat-icon-button (click)="addToFavorites()">
         <mat-icon>favorite_border</mat-icon>
     </button>
+
     <button class="favorite-icon red-button" *ngIf="alreadyFavorite" mat-icon-button (click)="removeFromFavorites()">
         <mat-icon>favorite</mat-icon>
     </button>
+
     <button class="close-icon" mat-icon-button [mat-dialog-close]="true"><mat-icon>close</mat-icon></button>
+
     <button class="slide-left-icon" *ngIf="id !== 1" mat-icon-button
-        (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon></button>
-    <button class="slide-right-icon" mat-icon-button
-        (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon></button>
+        (click)="previousPokemon()"><mat-icon>arrow_back_ios</mat-icon>
+    </button>
+
+    <button class="slide-right-icon" mat-icon-button (click)="nextPokemon()"><mat-icon>arrow_forward_ios</mat-icon>
+    </button>
+
     <mat-dialog-content class="mat-typography">
         <span class="name" mat-dialog-title>{{ name }}</span>
         <span class="id" mat-dialog-title>#{{ details.id }}</span>
@@ -19,4 +26,5 @@
             <app-stats-tabs [details]="details"></app-stats-tabs>
         </div>
     </mat-dialog-content>
+
 </div>
