--- a/src/app/stat/stat.component.html
+++ b/src/app/stat/stat.component.html
@@ -3,7 +3,7 @@
     <div class="progress-container">
         <span>{{ progressAsNumber }}</span>
         <div class="progress-bar">
-            <app-stat-progress [ngStyle]="{'width': progress}"></app-stat-progress>
+            <app-stat-progress [ngStyle]="{'width': progressAsString}"></app-stat-progress>
             <div class="base-progress">
 
             </div>
