--- a/src/app/detail-view/detail-view.component.scss
+++ b/src/app/detail-view/detail-view.component.scss
@@ -4,18 +4,34 @@
     width: 380px;
     height: 650px;
     transition: background-color 225ms linear;
+    overflow: hidden;
+
+    @media screen and (max-width: 475px) {
+        width: 280px;
+        height: 550px;
+    }
 }
 
 .favorite-icon {
     position: absolute;
     top: 20px;
     left: 20px;
+
+    @media screen and (max-width: 475px) {
+        top: 10px;
+        left: 10px;
+    }
 }
 
 .close-icon {
     position: absolute;
     top: 20px;
     right: 20px;
+
+    @media screen and (max-width: 475px) {
+        top: 10px;
+        right: 10px;
+    }
 }
 
 .name {
@@ -24,6 +40,11 @@
     position: absolute;
     top: 90px;
     left: 0;
+
+    @media screen and (max-width: 475px) {
+        font-size: 24px;
+        top: 50px;
+    }
 }
 
 .id {
@@ -32,6 +53,11 @@
     position: absolute;
     top: 90px;
     right: 0;
+
+    @media screen and (max-width: 475px) {
+        font-size: 24px;
+        top: 50px;
+    }
 }
 
 .slide-left-icon {
@@ -60,19 +86,30 @@
     background-color: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding-top: 40px;
+    padding-top: 20px;
+    border-top: 20px solid white;
     box-sizing: border-box;
+    overflow: auto;
+
+    @media screen and (max-width: 475px) {
+        padding-top: 0;
+    }
 }
 
 .pokemon-img {
     position: absolute;
-    z-index: 1;
+    z-index: 99;
     left: 0;
     right: 0;
     top: 0;
     bottom: 130px;
     margin: auto;
     width: 230px;
+
+    @media screen and (max-width: 475px) {
+        bottom: 100px;
+        width: 150px;
+    }
 }
 
 .pokeball-img {
