--- a/src/app/move/move.component.scss
+++ b/src/app/move/move.component.scss
@@ -5,4 +5,10 @@ div {
     padding: 0 2px;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.1);
+
+    @media screen and (max-width: 475px) {
+        line-height: 16px;
+        font-size: 10px;
+        margin: 2px 2px 2px 0;
+    }
 }
