changed responsive behavior of back to top icon

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -114,6 +114,10 @@ nav {
     filter: opacity(0.3);
     transition: all 125ms ease-in-out;
 
+    @media screen and (max-width: 400px) {
+        display: none;
+    }
+
     &:hover {
         cursor: pointer;
         filter: opacity(0.8);
