--- a/src/app/pokemon-favorites/pokemon-favorites.component.scss
+++ b/src/app/pokemon-favorites/pokemon-favorites.component.scss
@@ -1,6 +1,7 @@
 .pokemon-favorites-bg {
     width: 100%;
     margin-top: 30px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
 
